// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`naming changes always operationId failing assertion 1`] = `
[
  {
    "change": {
      "location": {
        "conceptualLocation": {
          "method": "get",
          "path": "/api/usersList/{userId}",
        },
        "conceptualPath": [
          "operations",
          "/api/usersList/{}",
          "get",
        ],
        "jsonPath": "/paths/~1api~1usersList~1{userId}/get",
        "kind": "operation",
      },
      "value": {
        "method": "get",
        "operationId": "__abc",
        "pathPattern": "/api/usersList/{userId}",
      },
    },
    "condition": undefined,
    "docsLink": undefined,
    "error": "__abc is not camelCase",
    "exempted": false,
    "expected": undefined,
    "isMust": true,
    "isShould": false,
    "name": "operationId naming check",
    "passed": false,
    "received": undefined,
    "severity": 2,
    "type": "requirement",
    "where": "GET /api/usersList/{userId}",
  },
]
`;

exports[`naming changes always operationId failing assertion 2`] = `
[
  {
    "change": {
      "added": {
        "method": "get",
        "operationId": "__abc",
        "pathPattern": "/api/usersList/{userId}",
      },
      "changeType": "added",
      "location": {
        "conceptualLocation": {
          "method": "get",
          "path": "/api/usersList/{userId}",
        },
        "conceptualPath": [
          "operations",
          "/api/usersList/{}",
          "get",
        ],
        "jsonPath": "/paths/~1api~1usersList~1{userId}/get",
        "kind": "operation",
      },
    },
    "condition": undefined,
    "docsLink": undefined,
    "error": "__abc is not camelCase",
    "exempted": false,
    "expected": undefined,
    "isMust": true,
    "isShould": false,
    "name": "operationId naming check",
    "passed": false,
    "received": undefined,
    "severity": 2,
    "type": "added",
    "where": "GET /api/usersList/{userId}",
  },
]
`;

exports[`naming changes always operationId failing assertion 3`] = `
[
  {
    "change": {
      "added": {
        "method": "get",
        "operationId": "__abc",
        "pathPattern": "/api/usersList/{userId}",
      },
      "changeType": "added",
      "location": {
        "conceptualLocation": {
          "method": "get",
          "path": "/api/usersList/{userId}",
        },
        "conceptualPath": [
          "operations",
          "/api/usersList/{}",
          "get",
        ],
        "jsonPath": "/paths/~1api~1usersList~1{userId}/get",
        "kind": "operation",
      },
    },
    "condition": undefined,
    "docsLink": undefined,
    "error": "__abc is not camelCase",
    "exempted": false,
    "expected": undefined,
    "isMust": true,
    "isShould": false,
    "name": "operationId naming check",
    "passed": false,
    "received": undefined,
    "severity": 2,
    "type": "added",
    "where": "GET /api/usersList/{userId}",
  },
]
`;

exports[`naming changes always operationId passing assertion 1`] = `
[
  {
    "change": {
      "location": {
        "conceptualLocation": {
          "method": "get",
          "path": "/api/users-list/{userId}",
        },
        "conceptualPath": [
          "operations",
          "/api/users-list/{}",
          "get",
        ],
        "jsonPath": "/paths/~1api~1users-list~1{userId}/get",
        "kind": "operation",
      },
      "value": {
        "method": "get",
        "operationId": "getUserById",
        "pathPattern": "/api/users-list/{userId}",
      },
    },
    "condition": undefined,
    "docsLink": undefined,
    "error": undefined,
    "exempted": false,
    "expected": undefined,
    "isMust": true,
    "isShould": false,
    "name": "operationId naming check",
    "passed": true,
    "received": undefined,
    "severity": 2,
    "type": "requirement",
    "where": "GET /api/users-list/{userId}",
  },
]
`;

exports[`naming changes always operationId passing assertion 2`] = `
[
  {
    "change": {
      "added": {
        "method": "get",
        "operationId": "getUserById",
        "pathPattern": "/api/users-list/{userId}",
      },
      "changeType": "added",
      "location": {
        "conceptualLocation": {
          "method": "get",
          "path": "/api/users-list/{userId}",
        },
        "conceptualPath": [
          "operations",
          "/api/users-list/{}",
          "get",
        ],
        "jsonPath": "/paths/~1api~1users-list~1{userId}/get",
        "kind": "operation",
      },
    },
    "condition": undefined,
    "docsLink": undefined,
    "error": undefined,
    "exempted": false,
    "expected": undefined,
    "isMust": true,
    "isShould": false,
    "name": "operationId naming check",
    "passed": true,
    "received": undefined,
    "severity": 2,
    "type": "added",
    "where": "GET /api/users-list/{userId}",
  },
]
`;

exports[`naming changes always operationId passing assertion 3`] = `
[
  {
    "change": {
      "added": {
        "method": "get",
        "operationId": "getUserById",
        "pathPattern": "/api/users-list/{userId}",
      },
      "changeType": "added",
      "location": {
        "conceptualLocation": {
          "method": "get",
          "path": "/api/users-list/{userId}",
        },
        "conceptualPath": [
          "operations",
          "/api/users-list/{}",
          "get",
        ],
        "jsonPath": "/paths/~1api~1users-list~1{userId}/get",
        "kind": "operation",
      },
    },
    "condition": undefined,
    "docsLink": undefined,
    "error": undefined,
    "exempted": false,
    "expected": undefined,
    "isMust": true,
    "isShould": false,
    "name": "operationId naming check",
    "passed": true,
    "received": undefined,
    "severity": 2,
    "type": "added",
    "where": "GET /api/users-list/{userId}",
  },
]
`;

exports[`naming changes always pathComponents failing assertion 1`] = `
[
  {
    "change": {
      "location": {
        "conceptualLocation": {
          "method": "get",
          "path": "/api/usersList/{userId}",
        },
        "conceptualPath": [
          "operations",
          "/api/usersList/{}",
          "get",
        ],
        "jsonPath": "/paths/~1api~1usersList~1{userId}/get",
        "kind": "operation",
      },
      "value": {
        "method": "get",
        "pathPattern": "/api/usersList/{userId}",
      },
    },
    "condition": undefined,
    "docsLink": undefined,
    "error": "usersList is not param-case",
    "exempted": false,
    "expected": undefined,
    "isMust": true,
    "isShould": false,
    "name": "operation path component naming check",
    "passed": false,
    "received": undefined,
    "severity": 2,
    "type": "requirement",
    "where": "GET /api/usersList/{userId}",
  },
]
`;

exports[`naming changes always pathComponents failing assertion 2`] = `
[
  {
    "change": {
      "added": {
        "method": "get",
        "pathPattern": "/api/usersList/{userId}",
      },
      "changeType": "added",
      "location": {
        "conceptualLocation": {
          "method": "get",
          "path": "/api/usersList/{userId}",
        },
        "conceptualPath": [
          "operations",
          "/api/usersList/{}",
          "get",
        ],
        "jsonPath": "/paths/~1api~1usersList~1{userId}/get",
        "kind": "operation",
      },
    },
    "condition": undefined,
    "docsLink": undefined,
    "error": "usersList is not param-case",
    "exempted": false,
    "expected": undefined,
    "isMust": true,
    "isShould": false,
    "name": "operation path component naming check",
    "passed": false,
    "received": undefined,
    "severity": 2,
    "type": "added",
    "where": "GET /api/usersList/{userId}",
  },
]
`;

exports[`naming changes always pathComponents failing assertion 3`] = `
[
  {
    "change": {
      "added": {
        "method": "get",
        "pathPattern": "/api/usersList/{userId}",
      },
      "changeType": "added",
      "location": {
        "conceptualLocation": {
          "method": "get",
          "path": "/api/usersList/{userId}",
        },
        "conceptualPath": [
          "operations",
          "/api/usersList/{}",
          "get",
        ],
        "jsonPath": "/paths/~1api~1usersList~1{userId}/get",
        "kind": "operation",
      },
    },
    "condition": undefined,
    "docsLink": undefined,
    "error": "usersList is not param-case",
    "exempted": false,
    "expected": undefined,
    "isMust": true,
    "isShould": false,
    "name": "operation path component naming check",
    "passed": false,
    "received": undefined,
    "severity": 2,
    "type": "added",
    "where": "GET /api/usersList/{userId}",
  },
]
`;

exports[`naming changes always pathComponents passing assertion 1`] = `
[
  {
    "change": {
      "location": {
        "conceptualLocation": {
          "method": "get",
          "path": "/api/users-list/{userId}",
        },
        "conceptualPath": [
          "operations",
          "/api/users-list/{}",
          "get",
        ],
        "jsonPath": "/paths/~1api~1users-list~1{userId}/get",
        "kind": "operation",
      },
      "value": {
        "method": "get",
        "pathPattern": "/api/users-list/{userId}",
      },
    },
    "condition": undefined,
    "docsLink": undefined,
    "error": undefined,
    "exempted": false,
    "expected": undefined,
    "isMust": true,
    "isShould": false,
    "name": "operation path component naming check",
    "passed": true,
    "received": undefined,
    "severity": 2,
    "type": "requirement",
    "where": "GET /api/users-list/{userId}",
  },
]
`;

exports[`naming changes always pathComponents passing assertion 2`] = `
[
  {
    "change": {
      "added": {
        "method": "get",
        "pathPattern": "/api/users-list/{userId}",
      },
      "changeType": "added",
      "location": {
        "conceptualLocation": {
          "method": "get",
          "path": "/api/users-list/{userId}",
        },
        "conceptualPath": [
          "operations",
          "/api/users-list/{}",
          "get",
        ],
        "jsonPath": "/paths/~1api~1users-list~1{userId}/get",
        "kind": "operation",
      },
    },
    "condition": undefined,
    "docsLink": undefined,
    "error": undefined,
    "exempted": false,
    "expected": undefined,
    "isMust": true,
    "isShould": false,
    "name": "operation path component naming check",
    "passed": true,
    "received": undefined,
    "severity": 2,
    "type": "added",
    "where": "GET /api/users-list/{userId}",
  },
]
`;

exports[`naming changes always pathComponents passing assertion 3`] = `
[
  {
    "change": {
      "added": {
        "method": "get",
        "pathPattern": "/api/users-list/{userId}",
      },
      "changeType": "added",
      "location": {
        "conceptualLocation": {
          "method": "get",
          "path": "/api/users-list/{userId}",
        },
        "conceptualPath": [
          "operations",
          "/api/users-list/{}",
          "get",
        ],
        "jsonPath": "/paths/~1api~1users-list~1{userId}/get",
        "kind": "operation",
      },
    },
    "condition": undefined,
    "docsLink": undefined,
    "error": undefined,
    "exempted": false,
    "expected": undefined,
    "isMust": true,
    "isShould": false,
    "name": "operation path component naming check",
    "passed": true,
    "received": undefined,
    "severity": 2,
    "type": "added",
    "where": "GET /api/users-list/{userId}",
  },
]
`;

exports[`naming changes always queryParameters failing assertion 1`] = `
[
  {
    "change": {
      "location": {
        "conceptualLocation": {
          "inRequest": {
            "query": "snake_case",
          },
          "method": "get",
          "path": "/api/users",
        },
        "conceptualPath": [
          "operations",
          "/api/users",
          "get",
          "parameters",
          "query",
          "snake_case",
        ],
        "jsonPath": "/paths/~1api~1users/get/parameters/0",
        "kind": "query-parameter",
      },
      "value": {
        "description": "hi",
        "in": "query",
        "name": "snake_case",
      },
    },
    "condition": undefined,
    "docsLink": undefined,
    "error": "snake_case is not camelCase",
    "exempted": false,
    "expected": undefined,
    "isMust": true,
    "isShould": false,
    "name": "query parameter naming check",
    "passed": false,
    "received": undefined,
    "severity": 2,
    "type": "requirement",
    "where": "GET /api/users query parameter: snake_case",
  },
]
`;

exports[`naming changes always queryParameters failing assertion 2`] = `
[
  {
    "change": {
      "added": {
        "description": "hi",
        "in": "query",
        "name": "snake_case",
      },
      "changeType": "added",
      "location": {
        "conceptualLocation": {
          "inRequest": {
            "query": "snake_case",
          },
          "method": "get",
          "path": "/api/users",
        },
        "conceptualPath": [
          "operations",
          "/api/users",
          "get",
          "parameters",
          "query",
          "snake_case",
        ],
        "jsonPath": "/paths/~1api~1users/get/parameters/0",
        "kind": "query-parameter",
      },
    },
    "condition": undefined,
    "docsLink": undefined,
    "error": "snake_case is not camelCase",
    "exempted": false,
    "expected": undefined,
    "isMust": true,
    "isShould": false,
    "name": "query parameter naming check",
    "passed": false,
    "received": undefined,
    "severity": 2,
    "type": "added",
    "where": "GET /api/users query parameter: snake_case",
  },
]
`;

exports[`naming changes always queryParameters failing assertion 3`] = `
[
  {
    "change": {
      "changeType": "changed",
      "changed": {
        "after": {
          "description": "hi",
          "in": "query",
          "name": "snake_case",
        },
        "before": {
          "in": "query",
          "name": "snake_case",
        },
      },
      "location": {
        "conceptualLocation": {
          "inRequest": {
            "query": "snake_case",
          },
          "method": "get",
          "path": "/api/users",
        },
        "conceptualPath": [
          "operations",
          "/api/users",
          "get",
          "parameters",
          "query",
          "snake_case",
        ],
        "jsonPath": "/paths/~1api~1users/get/parameters/0",
        "kind": "query-parameter",
      },
    },
    "condition": undefined,
    "docsLink": undefined,
    "error": "snake_case is not camelCase",
    "exempted": false,
    "expected": undefined,
    "isMust": true,
    "isShould": false,
    "name": "query parameter naming check",
    "passed": false,
    "received": undefined,
    "severity": 2,
    "type": "changed",
    "where": "GET /api/users query parameter: snake_case",
  },
]
`;

exports[`naming changes always queryParameters passing assertion 1`] = `
[
  {
    "change": {
      "location": {
        "conceptualLocation": {
          "inRequest": {
            "query": "camelCase",
          },
          "method": "get",
          "path": "/api/users",
        },
        "conceptualPath": [
          "operations",
          "/api/users",
          "get",
          "parameters",
          "query",
          "camelCase",
        ],
        "jsonPath": "/paths/~1api~1users/get/parameters/0",
        "kind": "query-parameter",
      },
      "value": {
        "description": "hi",
        "in": "query",
        "name": "camelCase",
      },
    },
    "condition": undefined,
    "docsLink": undefined,
    "error": undefined,
    "exempted": false,
    "expected": undefined,
    "isMust": true,
    "isShould": false,
    "name": "query parameter naming check",
    "passed": true,
    "received": undefined,
    "severity": 2,
    "type": "requirement",
    "where": "GET /api/users query parameter: camelCase",
  },
]
`;

exports[`naming changes always queryParameters passing assertion 2`] = `
[
  {
    "change": {
      "added": {
        "description": "hi",
        "in": "query",
        "name": "camelCase",
      },
      "changeType": "added",
      "location": {
        "conceptualLocation": {
          "inRequest": {
            "query": "camelCase",
          },
          "method": "get",
          "path": "/api/users",
        },
        "conceptualPath": [
          "operations",
          "/api/users",
          "get",
          "parameters",
          "query",
          "camelCase",
        ],
        "jsonPath": "/paths/~1api~1users/get/parameters/0",
        "kind": "query-parameter",
      },
    },
    "condition": undefined,
    "docsLink": undefined,
    "error": undefined,
    "exempted": false,
    "expected": undefined,
    "isMust": true,
    "isShould": false,
    "name": "query parameter naming check",
    "passed": true,
    "received": undefined,
    "severity": 2,
    "type": "added",
    "where": "GET /api/users query parameter: camelCase",
  },
]
`;

exports[`naming changes always queryParameters passing assertion 3`] = `
[
  {
    "change": {
      "changeType": "changed",
      "changed": {
        "after": {
          "description": "hi",
          "in": "query",
          "name": "camelCase",
        },
        "before": {
          "in": "query",
          "name": "camelCase",
        },
      },
      "location": {
        "conceptualLocation": {
          "inRequest": {
            "query": "camelCase",
          },
          "method": "get",
          "path": "/api/users",
        },
        "conceptualPath": [
          "operations",
          "/api/users",
          "get",
          "parameters",
          "query",
          "camelCase",
        ],
        "jsonPath": "/paths/~1api~1users/get/parameters/0",
        "kind": "query-parameter",
      },
    },
    "condition": undefined,
    "docsLink": undefined,
    "error": undefined,
    "exempted": false,
    "expected": undefined,
    "isMust": true,
    "isShould": false,
    "name": "query parameter naming check",
    "passed": true,
    "received": undefined,
    "severity": 2,
    "type": "changed",
    "where": "GET /api/users query parameter: camelCase",
  },
]
`;

exports[`naming changes always request header failing assertion 1`] = `
[
  {
    "change": {
      "location": {
        "conceptualLocation": {
          "inRequest": {
            "header": "snake_case",
          },
          "method": "get",
          "path": "/api/users",
        },
        "conceptualPath": [
          "operations",
          "/api/users",
          "get",
          "parameters",
          "header",
          "snake_case",
        ],
        "jsonPath": "/paths/~1api~1users/get/parameters/0",
        "kind": "header-parameter",
      },
      "value": {
        "description": "hi",
        "in": "header",
        "name": "snake_case",
      },
    },
    "condition": undefined,
    "docsLink": undefined,
    "error": "snake_case is not PascalCase",
    "exempted": false,
    "expected": undefined,
    "isMust": true,
    "isShould": false,
    "name": "header parameter naming check",
    "passed": false,
    "received": undefined,
    "severity": 2,
    "type": "requirement",
    "where": "GET /api/users header parameter: snake_case",
  },
]
`;

exports[`naming changes always request header failing assertion 2`] = `
[
  {
    "change": {
      "added": {
        "description": "hi",
        "in": "header",
        "name": "snake_case",
      },
      "changeType": "added",
      "location": {
        "conceptualLocation": {
          "inRequest": {
            "header": "snake_case",
          },
          "method": "get",
          "path": "/api/users",
        },
        "conceptualPath": [
          "operations",
          "/api/users",
          "get",
          "parameters",
          "header",
          "snake_case",
        ],
        "jsonPath": "/paths/~1api~1users/get/parameters/0",
        "kind": "header-parameter",
      },
    },
    "condition": undefined,
    "docsLink": undefined,
    "error": "snake_case is not PascalCase",
    "exempted": false,
    "expected": undefined,
    "isMust": true,
    "isShould": false,
    "name": "header parameter naming check",
    "passed": false,
    "received": undefined,
    "severity": 2,
    "type": "added",
    "where": "GET /api/users header parameter: snake_case",
  },
]
`;

exports[`naming changes always request header failing assertion 3`] = `
[
  {
    "change": {
      "changeType": "changed",
      "changed": {
        "after": {
          "description": "hi",
          "in": "header",
          "name": "snake_case",
        },
        "before": {
          "in": "header",
          "name": "snake_case",
        },
      },
      "location": {
        "conceptualLocation": {
          "inRequest": {
            "header": "snake_case",
          },
          "method": "get",
          "path": "/api/users",
        },
        "conceptualPath": [
          "operations",
          "/api/users",
          "get",
          "parameters",
          "header",
          "snake_case",
        ],
        "jsonPath": "/paths/~1api~1users/get/parameters/0",
        "kind": "header-parameter",
      },
    },
    "condition": undefined,
    "docsLink": undefined,
    "error": "snake_case is not PascalCase",
    "exempted": false,
    "expected": undefined,
    "isMust": true,
    "isShould": false,
    "name": "header parameter naming check",
    "passed": false,
    "received": undefined,
    "severity": 2,
    "type": "changed",
    "where": "GET /api/users header parameter: snake_case",
  },
]
`;

exports[`naming changes always request header passing assertion 1`] = `
[
  {
    "change": {
      "location": {
        "conceptualLocation": {
          "inRequest": {
            "header": "PascalCase",
          },
          "method": "get",
          "path": "/api/users",
        },
        "conceptualPath": [
          "operations",
          "/api/users",
          "get",
          "parameters",
          "header",
          "PascalCase",
        ],
        "jsonPath": "/paths/~1api~1users/get/parameters/0",
        "kind": "header-parameter",
      },
      "value": {
        "description": "hi",
        "in": "header",
        "name": "PascalCase",
      },
    },
    "condition": undefined,
    "docsLink": undefined,
    "error": undefined,
    "exempted": false,
    "expected": undefined,
    "isMust": true,
    "isShould": false,
    "name": "header parameter naming check",
    "passed": true,
    "received": undefined,
    "severity": 2,
    "type": "requirement",
    "where": "GET /api/users header parameter: PascalCase",
  },
]
`;

exports[`naming changes always request header passing assertion 2`] = `
[
  {
    "change": {
      "added": {
        "description": "hi",
        "in": "header",
        "name": "PascalCase",
      },
      "changeType": "added",
      "location": {
        "conceptualLocation": {
          "inRequest": {
            "header": "PascalCase",
          },
          "method": "get",
          "path": "/api/users",
        },
        "conceptualPath": [
          "operations",
          "/api/users",
          "get",
          "parameters",
          "header",
          "PascalCase",
        ],
        "jsonPath": "/paths/~1api~1users/get/parameters/0",
        "kind": "header-parameter",
      },
    },
    "condition": undefined,
    "docsLink": undefined,
    "error": undefined,
    "exempted": false,
    "expected": undefined,
    "isMust": true,
    "isShould": false,
    "name": "header parameter naming check",
    "passed": true,
    "received": undefined,
    "severity": 2,
    "type": "added",
    "where": "GET /api/users header parameter: PascalCase",
  },
]
`;

exports[`naming changes always request header passing assertion 3`] = `
[
  {
    "change": {
      "changeType": "changed",
      "changed": {
        "after": {
          "description": "hi",
          "in": "header",
          "name": "PascalCase",
        },
        "before": {
          "in": "header",
          "name": "PascalCase",
        },
      },
      "location": {
        "conceptualLocation": {
          "inRequest": {
            "header": "PascalCase",
          },
          "method": "get",
          "path": "/api/users",
        },
        "conceptualPath": [
          "operations",
          "/api/users",
          "get",
          "parameters",
          "header",
          "PascalCase",
        ],
        "jsonPath": "/paths/~1api~1users/get/parameters/0",
        "kind": "header-parameter",
      },
    },
    "condition": undefined,
    "docsLink": undefined,
    "error": undefined,
    "exempted": false,
    "expected": undefined,
    "isMust": true,
    "isShould": false,
    "name": "header parameter naming check",
    "passed": true,
    "received": undefined,
    "severity": 2,
    "type": "changed",
    "where": "GET /api/users header parameter: PascalCase",
  },
]
`;

exports[`naming changes always request property failing assertion 1`] = `
[
  {
    "change": {
      "location": {
        "conceptualLocation": {
          "inRequest": {
            "body": {
              "contentType": "application/json",
            },
          },
          "jsonSchemaTrail": [
            "userName",
          ],
          "method": "get",
          "path": "/api/users",
        },
        "conceptualPath": [
          "operations",
          "/api/users",
          "get",
          "application/json",
          "userName",
        ],
        "jsonPath": "/paths/~1api~1users/get/requestBody/content/application~1json/schema/properties/userName",
        "kind": "field",
      },
      "value": {
        "flatSchema": {
          "description": "hi",
          "type": "string",
        },
        "key": "userName",
        "required": false,
      },
    },
    "condition": undefined,
    "docsLink": undefined,
    "error": "userName is not snake_case",
    "expected": undefined,
    "isMust": true,
    "isShould": false,
    "name": "request property naming check",
    "passed": false,
    "received": undefined,
    "severity": 2,
    "type": "requirement",
    "where": "GET /api/users request body: application/json property: userName",
  },
]
`;

exports[`naming changes always request property failing assertion 2`] = `
[
  {
    "change": {
      "added": {
        "flatSchema": {
          "description": "hi",
          "type": "string",
        },
        "key": "userName",
        "required": false,
      },
      "changeType": "added",
      "location": {
        "conceptualLocation": {
          "inRequest": {
            "body": {
              "contentType": "application/json",
            },
          },
          "jsonSchemaTrail": [
            "userName",
          ],
          "method": "get",
          "path": "/api/users",
        },
        "conceptualPath": [
          "operations",
          "/api/users",
          "get",
          "application/json",
          "userName",
        ],
        "jsonPath": "/paths/~1api~1users/get/requestBody/content/application~1json/schema/properties/userName",
        "kind": "field",
      },
    },
    "condition": undefined,
    "docsLink": undefined,
    "error": "userName is not snake_case",
    "expected": undefined,
    "isMust": true,
    "isShould": false,
    "name": "request property naming check",
    "passed": false,
    "received": undefined,
    "severity": 2,
    "type": "added",
    "where": "GET /api/users request body: application/json property: userName",
  },
]
`;

exports[`naming changes always request property failing assertion 3`] = `
[
  {
    "change": {
      "changeType": "changed",
      "changed": {
        "after": {
          "flatSchema": {
            "description": "hi",
            "type": "string",
          },
          "key": "userName",
          "required": false,
        },
        "before": {
          "flatSchema": {
            "type": "string",
          },
          "key": "userName",
          "required": false,
        },
      },
      "location": {
        "conceptualLocation": {
          "inRequest": {
            "body": {
              "contentType": "application/json",
            },
          },
          "jsonSchemaTrail": [
            "userName",
          ],
          "method": "get",
          "path": "/api/users",
        },
        "conceptualPath": [
          "operations",
          "/api/users",
          "get",
          "application/json",
          "userName",
        ],
        "jsonPath": "/paths/~1api~1users/get/requestBody/content/application~1json/schema/properties/userName",
        "kind": "field",
      },
    },
    "condition": undefined,
    "docsLink": undefined,
    "error": "userName is not snake_case",
    "expected": undefined,
    "isMust": true,
    "isShould": false,
    "name": "request property naming check",
    "passed": false,
    "received": undefined,
    "severity": 2,
    "type": "changed",
    "where": "GET /api/users request body: application/json property: userName",
  },
]
`;

exports[`naming changes always request property passing assertion 1`] = `
[
  {
    "change": {
      "location": {
        "conceptualLocation": {
          "inRequest": {
            "body": {
              "contentType": "application/json",
            },
          },
          "jsonSchemaTrail": [
            "user_name",
          ],
          "method": "get",
          "path": "/api/users",
        },
        "conceptualPath": [
          "operations",
          "/api/users",
          "get",
          "application/json",
          "user_name",
        ],
        "jsonPath": "/paths/~1api~1users/get/requestBody/content/application~1json/schema/properties/user_name",
        "kind": "field",
      },
      "value": {
        "flatSchema": {
          "description": "hi",
          "type": "string",
        },
        "key": "user_name",
        "required": false,
      },
    },
    "condition": undefined,
    "docsLink": undefined,
    "error": undefined,
    "expected": undefined,
    "isMust": true,
    "isShould": false,
    "name": "request property naming check",
    "passed": true,
    "received": undefined,
    "severity": 2,
    "type": "requirement",
    "where": "GET /api/users request body: application/json property: user_name",
  },
]
`;

exports[`naming changes always request property passing assertion 2`] = `
[
  {
    "change": {
      "added": {
        "flatSchema": {
          "description": "hi",
          "type": "string",
        },
        "key": "user_name",
        "required": false,
      },
      "changeType": "added",
      "location": {
        "conceptualLocation": {
          "inRequest": {
            "body": {
              "contentType": "application/json",
            },
          },
          "jsonSchemaTrail": [
            "user_name",
          ],
          "method": "get",
          "path": "/api/users",
        },
        "conceptualPath": [
          "operations",
          "/api/users",
          "get",
          "application/json",
          "user_name",
        ],
        "jsonPath": "/paths/~1api~1users/get/requestBody/content/application~1json/schema/properties/user_name",
        "kind": "field",
      },
    },
    "condition": undefined,
    "docsLink": undefined,
    "error": undefined,
    "expected": undefined,
    "isMust": true,
    "isShould": false,
    "name": "request property naming check",
    "passed": true,
    "received": undefined,
    "severity": 2,
    "type": "added",
    "where": "GET /api/users request body: application/json property: user_name",
  },
]
`;

exports[`naming changes always request property passing assertion 3`] = `
[
  {
    "change": {
      "changeType": "changed",
      "changed": {
        "after": {
          "flatSchema": {
            "description": "hi",
            "type": "string",
          },
          "key": "user_name",
          "required": false,
        },
        "before": {
          "flatSchema": {
            "type": "string",
          },
          "key": "user_name",
          "required": false,
        },
      },
      "location": {
        "conceptualLocation": {
          "inRequest": {
            "body": {
              "contentType": "application/json",
            },
          },
          "jsonSchemaTrail": [
            "user_name",
          ],
          "method": "get",
          "path": "/api/users",
        },
        "conceptualPath": [
          "operations",
          "/api/users",
          "get",
          "application/json",
          "user_name",
        ],
        "jsonPath": "/paths/~1api~1users/get/requestBody/content/application~1json/schema/properties/user_name",
        "kind": "field",
      },
    },
    "condition": undefined,
    "docsLink": undefined,
    "error": undefined,
    "expected": undefined,
    "isMust": true,
    "isShould": false,
    "name": "request property naming check",
    "passed": true,
    "received": undefined,
    "severity": 2,
    "type": "changed",
    "where": "GET /api/users request body: application/json property: user_name",
  },
]
`;

exports[`naming changes always response header failing assertion 1`] = `
[
  {
    "change": {
      "location": {
        "conceptualLocation": {
          "inResponse": {
            "header": "camelCase",
            "statusCode": "200",
          },
          "method": "get",
          "path": "/api/users",
        },
        "conceptualPath": [
          "operations",
          "/api/users",
          "get",
          "responses",
          "200",
          "headers",
          "camelCase",
        ],
        "jsonPath": "/paths/~1api~1users/get/responses/200/headers/camelCase",
        "kind": "response-header",
      },
      "value": {
        "description": "hello",
        "name": "camelCase",
        "schema": {},
      },
    },
    "condition": undefined,
    "docsLink": undefined,
    "error": "camelCase is not param-case",
    "exempted": false,
    "expected": undefined,
    "isMust": true,
    "isShould": false,
    "name": "header parameter naming check",
    "passed": false,
    "received": undefined,
    "severity": 2,
    "type": "requirement",
    "where": "GET /api/users response 200 response header: camelCase",
  },
]
`;

exports[`naming changes always response header failing assertion 2`] = `
[
  {
    "change": {
      "added": {
        "description": "hello",
        "name": "camelCase",
        "schema": {},
      },
      "changeType": "added",
      "location": {
        "conceptualLocation": {
          "inResponse": {
            "header": "camelCase",
            "statusCode": "200",
          },
          "method": "get",
          "path": "/api/users",
        },
        "conceptualPath": [
          "operations",
          "/api/users",
          "get",
          "responses",
          "200",
          "headers",
          "camelCase",
        ],
        "jsonPath": "/paths/~1api~1users/get/responses/200/headers/camelCase",
        "kind": "response-header",
      },
    },
    "condition": undefined,
    "docsLink": undefined,
    "error": "camelCase is not param-case",
    "exempted": false,
    "expected": undefined,
    "isMust": true,
    "isShould": false,
    "name": "header parameter naming check",
    "passed": false,
    "received": undefined,
    "severity": 2,
    "type": "added",
    "where": "GET /api/users response 200 response header: camelCase",
  },
]
`;

exports[`naming changes always response header failing assertion 3`] = `
[
  {
    "change": {
      "changeType": "changed",
      "changed": {
        "after": {
          "description": "hello",
          "name": "camelCase",
          "schema": {},
        },
        "before": {
          "name": "camelCase",
          "schema": {},
        },
      },
      "location": {
        "conceptualLocation": {
          "inResponse": {
            "header": "camelCase",
            "statusCode": "200",
          },
          "method": "get",
          "path": "/api/users",
        },
        "conceptualPath": [
          "operations",
          "/api/users",
          "get",
          "responses",
          "200",
          "headers",
          "camelCase",
        ],
        "jsonPath": "/paths/~1api~1users/get/responses/200/headers/camelCase",
        "kind": "response-header",
      },
    },
    "condition": undefined,
    "docsLink": undefined,
    "error": "camelCase is not param-case",
    "exempted": false,
    "expected": undefined,
    "isMust": true,
    "isShould": false,
    "name": "header parameter naming check",
    "passed": false,
    "received": undefined,
    "severity": 2,
    "type": "changed",
    "where": "GET /api/users response 200 response header: camelCase",
  },
]
`;

exports[`naming changes always response header passing assertion 1`] = `
[
  {
    "change": {
      "location": {
        "conceptualLocation": {
          "inResponse": {
            "header": "param-case",
            "statusCode": "200",
          },
          "method": "get",
          "path": "/api/users",
        },
        "conceptualPath": [
          "operations",
          "/api/users",
          "get",
          "responses",
          "200",
          "headers",
          "param-case",
        ],
        "jsonPath": "/paths/~1api~1users/get/responses/200/headers/param-case",
        "kind": "response-header",
      },
      "value": {
        "description": "hello",
        "name": "param-case",
        "schema": {},
      },
    },
    "condition": undefined,
    "docsLink": undefined,
    "error": undefined,
    "exempted": false,
    "expected": undefined,
    "isMust": true,
    "isShould": false,
    "name": "header parameter naming check",
    "passed": true,
    "received": undefined,
    "severity": 2,
    "type": "requirement",
    "where": "GET /api/users response 200 response header: param-case",
  },
]
`;

exports[`naming changes always response header passing assertion 2`] = `
[
  {
    "change": {
      "added": {
        "description": "hello",
        "name": "param-case",
        "schema": {},
      },
      "changeType": "added",
      "location": {
        "conceptualLocation": {
          "inResponse": {
            "header": "param-case",
            "statusCode": "200",
          },
          "method": "get",
          "path": "/api/users",
        },
        "conceptualPath": [
          "operations",
          "/api/users",
          "get",
          "responses",
          "200",
          "headers",
          "param-case",
        ],
        "jsonPath": "/paths/~1api~1users/get/responses/200/headers/param-case",
        "kind": "response-header",
      },
    },
    "condition": undefined,
    "docsLink": undefined,
    "error": undefined,
    "exempted": false,
    "expected": undefined,
    "isMust": true,
    "isShould": false,
    "name": "header parameter naming check",
    "passed": true,
    "received": undefined,
    "severity": 2,
    "type": "added",
    "where": "GET /api/users response 200 response header: param-case",
  },
]
`;

exports[`naming changes always response header passing assertion 3`] = `
[
  {
    "change": {
      "changeType": "changed",
      "changed": {
        "after": {
          "description": "hello",
          "name": "param-case",
          "schema": {},
        },
        "before": {
          "name": "param-case",
          "schema": {},
        },
      },
      "location": {
        "conceptualLocation": {
          "inResponse": {
            "header": "param-case",
            "statusCode": "200",
          },
          "method": "get",
          "path": "/api/users",
        },
        "conceptualPath": [
          "operations",
          "/api/users",
          "get",
          "responses",
          "200",
          "headers",
          "param-case",
        ],
        "jsonPath": "/paths/~1api~1users/get/responses/200/headers/param-case",
        "kind": "response-header",
      },
    },
    "condition": undefined,
    "docsLink": undefined,
    "error": undefined,
    "exempted": false,
    "expected": undefined,
    "isMust": true,
    "isShould": false,
    "name": "header parameter naming check",
    "passed": true,
    "received": undefined,
    "severity": 2,
    "type": "changed",
    "where": "GET /api/users response 200 response header: param-case",
  },
]
`;

exports[`naming changes always response property failing assertion 1`] = `
[
  {
    "change": {
      "location": {
        "conceptualLocation": {
          "inResponse": {
            "body": {
              "contentType": "application/json",
            },
            "statusCode": "200",
          },
          "jsonSchemaTrail": [
            "userName",
          ],
          "method": "get",
          "path": "/api/users",
        },
        "conceptualPath": [
          "operations",
          "/api/users",
          "get",
          "responses",
          "200",
          "application/json",
          "userName",
        ],
        "jsonPath": "/paths/~1api~1users/get/responses/200/content/application~1json/schema/properties/userName",
        "kind": "field",
      },
      "value": {
        "flatSchema": {
          "description": "hi",
          "type": "string",
        },
        "key": "userName",
        "required": false,
      },
    },
    "condition": undefined,
    "docsLink": undefined,
    "error": "userName is not snake_case",
    "exempted": false,
    "expected": undefined,
    "isMust": true,
    "isShould": false,
    "name": "response property naming check",
    "passed": false,
    "received": undefined,
    "severity": 2,
    "type": "requirement",
    "where": "GET /api/users response 200 response body: application/json property userName",
  },
]
`;

exports[`naming changes always response property failing assertion 2`] = `
[
  {
    "change": {
      "added": {
        "flatSchema": {
          "description": "hi",
          "type": "string",
        },
        "key": "userName",
        "required": false,
      },
      "changeType": "added",
      "location": {
        "conceptualLocation": {
          "inResponse": {
            "body": {
              "contentType": "application/json",
            },
            "statusCode": "200",
          },
          "jsonSchemaTrail": [
            "userName",
          ],
          "method": "get",
          "path": "/api/users",
        },
        "conceptualPath": [
          "operations",
          "/api/users",
          "get",
          "responses",
          "200",
          "application/json",
          "userName",
        ],
        "jsonPath": "/paths/~1api~1users/get/responses/200/content/application~1json/schema/properties/userName",
        "kind": "field",
      },
    },
    "condition": undefined,
    "docsLink": undefined,
    "error": "userName is not snake_case",
    "exempted": false,
    "expected": undefined,
    "isMust": true,
    "isShould": false,
    "name": "response property naming check",
    "passed": false,
    "received": undefined,
    "severity": 2,
    "type": "added",
    "where": "GET /api/users response 200 response body: application/json property userName",
  },
]
`;

exports[`naming changes always response property failing assertion 3`] = `
[
  {
    "change": {
      "changeType": "changed",
      "changed": {
        "after": {
          "flatSchema": {
            "description": "hi",
            "type": "string",
          },
          "key": "userName",
          "required": false,
        },
        "before": {
          "flatSchema": {
            "type": "string",
          },
          "key": "userName",
          "required": false,
        },
      },
      "location": {
        "conceptualLocation": {
          "inResponse": {
            "body": {
              "contentType": "application/json",
            },
            "statusCode": "200",
          },
          "jsonSchemaTrail": [
            "userName",
          ],
          "method": "get",
          "path": "/api/users",
        },
        "conceptualPath": [
          "operations",
          "/api/users",
          "get",
          "responses",
          "200",
          "application/json",
          "userName",
        ],
        "jsonPath": "/paths/~1api~1users/get/responses/200/content/application~1json/schema/properties/userName",
        "kind": "field",
      },
    },
    "condition": undefined,
    "docsLink": undefined,
    "error": "userName is not snake_case",
    "exempted": false,
    "expected": undefined,
    "isMust": true,
    "isShould": false,
    "name": "response property naming check",
    "passed": false,
    "received": undefined,
    "severity": 2,
    "type": "changed",
    "where": "GET /api/users response 200 response body: application/json property userName",
  },
]
`;

exports[`naming changes always response property passing assertion 1`] = `
[
  {
    "change": {
      "location": {
        "conceptualLocation": {
          "inResponse": {
            "body": {
              "contentType": "application/json",
            },
            "statusCode": "200",
          },
          "jsonSchemaTrail": [
            "user_name",
          ],
          "method": "get",
          "path": "/api/users",
        },
        "conceptualPath": [
          "operations",
          "/api/users",
          "get",
          "responses",
          "200",
          "application/json",
          "user_name",
        ],
        "jsonPath": "/paths/~1api~1users/get/responses/200/content/application~1json/schema/properties/user_name",
        "kind": "field",
      },
      "value": {
        "flatSchema": {
          "description": "hi",
          "type": "string",
        },
        "key": "user_name",
        "required": false,
      },
    },
    "condition": undefined,
    "docsLink": undefined,
    "error": undefined,
    "exempted": false,
    "expected": undefined,
    "isMust": true,
    "isShould": false,
    "name": "response property naming check",
    "passed": true,
    "received": undefined,
    "severity": 2,
    "type": "requirement",
    "where": "GET /api/users response 200 response body: application/json property user_name",
  },
]
`;

exports[`naming changes always response property passing assertion 2`] = `
[
  {
    "change": {
      "added": {
        "flatSchema": {
          "description": "hi",
          "type": "string",
        },
        "key": "user_name",
        "required": false,
      },
      "changeType": "added",
      "location": {
        "conceptualLocation": {
          "inResponse": {
            "body": {
              "contentType": "application/json",
            },
            "statusCode": "200",
          },
          "jsonSchemaTrail": [
            "user_name",
          ],
          "method": "get",
          "path": "/api/users",
        },
        "conceptualPath": [
          "operations",
          "/api/users",
          "get",
          "responses",
          "200",
          "application/json",
          "user_name",
        ],
        "jsonPath": "/paths/~1api~1users/get/responses/200/content/application~1json/schema/properties/user_name",
        "kind": "field",
      },
    },
    "condition": undefined,
    "docsLink": undefined,
    "error": undefined,
    "exempted": false,
    "expected": undefined,
    "isMust": true,
    "isShould": false,
    "name": "response property naming check",
    "passed": true,
    "received": undefined,
    "severity": 2,
    "type": "added",
    "where": "GET /api/users response 200 response body: application/json property user_name",
  },
]
`;

exports[`naming changes always response property passing assertion 3`] = `
[
  {
    "change": {
      "changeType": "changed",
      "changed": {
        "after": {
          "flatSchema": {
            "description": "hi",
            "type": "string",
          },
          "key": "user_name",
          "required": false,
        },
        "before": {
          "flatSchema": {
            "type": "string",
          },
          "key": "user_name",
          "required": false,
        },
      },
      "location": {
        "conceptualLocation": {
          "inResponse": {
            "body": {
              "contentType": "application/json",
            },
            "statusCode": "200",
          },
          "jsonSchemaTrail": [
            "user_name",
          ],
          "method": "get",
          "path": "/api/users",
        },
        "conceptualPath": [
          "operations",
          "/api/users",
          "get",
          "responses",
          "200",
          "application/json",
          "user_name",
        ],
        "jsonPath": "/paths/~1api~1users/get/responses/200/content/application~1json/schema/properties/user_name",
        "kind": "field",
      },
    },
    "condition": undefined,
    "docsLink": undefined,
    "error": undefined,
    "exempted": false,
    "expected": undefined,
    "isMust": true,
    "isShould": false,
    "name": "response property naming check",
    "passed": true,
    "received": undefined,
    "severity": 2,
    "type": "changed",
    "where": "GET /api/users response 200 response body: application/json property user_name",
  },
]
`;

exports[`naming changes configuration naming change configuration validation 1`] = `"Expected config object in NamingChangesRuleset"`;

exports[`naming changes configuration naming change configuration validation 2`] = `"Expected config.applies in NamingChangesRuleset to be specified and be one of added, addedOrChanged, always"`;

exports[`naming changes configuration naming change configuration validation 3`] = `"Expected config.applies in NamingChangesRuleset to be specified and be one of added, addedOrChanged, always"`;

exports[`naming changes configuration naming change configuration validation 4`] = `"Expected casing option to be one of snake_case, camelCase, Capital-Param-Case, param-case, PascalCase, received not a valid format for queryParameters"`;
